apps/rss/miniflux/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: miniflux
  namespace: miniflux
spec:
  parentRefs:
    - name: main
      namespace: traefik
      sectionName: http
  hostnames:
    - miniflux.beeslab.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: miniflux
          port: 8080
